# Town-Crier

./: .clang-format  .docker_push  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  cert.cpp  compile-project.sh  include  install-dependencies.sh  run-tests.sh  src  tc
code/TC-Linux/: .gitignore  CMakeLists.txt  Makefile
code/TC-Linux/App/: App.cpp  App.h  Bookkeeping.h  CMakeLists.txt  Enclave_u.c  Enclave_u.h  EthRPC.cpp  Makefile  Monitor.cpp  Utils.cpp  Utils.h  eth_api.json  ethrpcclient.h  ocalls.cpp  printf.c  printf.h
code/TC-Linux/Enclave/: ABI.cpp  ABI.h  Attestation_Enc.c  CMakeLists.txt  Current_Google.cpp  Enclave.edl  Enclave_t.c  Enclave_t.h  Makefile  SSLClient.h  Scraper_lib.h  Transaction.cpp
code/TC/jsonrpc-cpp-0.5/: LICENSE  Makefile.am  SConstruct  autogen.sh  configure.ac
code/TC/jsonrpc-cpp-0.5/doc/: doxygen-main.h
code/TC/jsonrpc-cpp-0.5/examples/: Makefile.am  system.cpp  tcp-client.cpp  tcp-server.cpp  test-rpc.cpp  udp-client.cpp
code/TC/jsonrpc-cpp-0.5/include/: netstring.h  networking.h
code/TC/jsonrpc-cpp-0.5/src/: Makefile.am  jsonrpc_handler.cpp  jsonrpc_httpclient.cpp  jsonrpc_tcpserver.cpp  jsonrpc_udpserver.cpp  networking.cpp
code/TC/jsonrpc-cpp-0.5/test/: test-core.cpp  test-system.cpp
code/src/Enclave/: ABI.h  CMakeLists.txt  Commons.h  Current_Yahoo.cpp  ECDSA.c  ECDSA.h  Enclave.edl  EnclaveTests.edl  EventHandler.cpp  EventHandler.h  Exception.c  Flight.cpp  SSLClient.c  SSLClient.h  Scraper_lib.c  Scraper_lib.h  Steam2.cpp  StockTicker.cpp  Transaction.cpp  dispatcher.h  ssl_easy_client.cpp  test_ssl.cpp
code/src/Enclave/tests/: Bloomberg.cpp  Google.cpp  UPS.cpp  Yahoo.cpp  test_get_page_on_sll.cpp
src/: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO  config  config-hw  config-hw-test  config-release  config-sim-test  config-systemd  lint.sh  logging.conf  tc.service
src/App/: App.cpp  App.h  CMakeLists.txt  Converter.cpp  Converter.h  EthRPC.cpp  EthRPC.h  Init.cpp  Init.h  Monitor.cpp  Monitor.h  RemoteAtt.cpp  StatRPCServer.cpp  StatRPCServer.h  StatusRPCServer.cpp  StatusRPCServer.h  StatusRpcServer.cpp  StatusRpcServer.h  Utils.cpp  Utils.h  abstractstatusserver.h  attestation.cpp  attestation.h  config.cpp  config.h  convert.cpp  converter.cpp  converter.h  debug.cpp  debug.h  eth_api.json  eth_rpc.cpp  eth_rpc.h  ethrpcclient.h  gen-rpc-stub.sh  key-utils.cpp  key-utils.h  key_utils.cpp  key_utils.h  keygen.cpp  (+33 more)
src/App/bookkeeping/: database.cpp  database.h  database.hxx  transaction-record-odb.cxx  transaction-record-odb.hxx  transaction-record-odb.ixx  transaction-record.hxx
src/App/services/: gen_proto.sh  tc.proto
src/App/test/: .TestMain.cpp.swp  ABI.cpp  EventHandler.cpp  Flight.cpp  HandleRequest.cpp  Init.cpp  RLP.cpp  Regex.cpp  SGXTestBase.h  SSL.cpp  SealData.cpp  Sealing.cpp  TestMain.cpp  Transaction.cpp  app-odb.cpp  app-request-harser.cpp  attestation.cpp  dummy.cpp  enclave-event-handler.cpp  event-handler.cpp  keygen.cpp  sealing.cpp  tc-test.cpp  test-data.h  test_main.cpp  test_odb.cpp  test_scrapers.cpp  test_tls.cpp  transaction.cpp  uint.cpp
src/Common/: Constants.h  Converter.cpp  Converter.h  Debug.c  Debug.h  LOGGING  Log.c  Log.h  loguru.hpp  macros.h  version.h.in
src/Enclave/: ABI.cpp  CMakeLists.txt  Commons.h  Current_Google.cpp  Current_Yahoo.cpp  Current_bloomberg.cpp  Debug.c  Debug.h  ECDSA.c  Enclave.config.xml  Enclave.edl  EnclaveTest.edl  Encoding.cpp  Encoding.h  EventHandler.cpp  Flight.cpp  RootCerts.c  SSLClient.c  SSLClient.h  Scraper_lib.c  Scraper_lib.h  Steam2.cpp  StockTicker.cpp  Transaction.cpp  Transaction.h  ca_bundle.h  commons.cpp  commons.h  create_attestation.cpp  create_report.cpp  debug.c  debug.h  dispatcher.cpp  dispatcher.h  ecall_attestation.cpp  enc.h  enclave_exception_hdlr.c  encoding.cpp  encoding.h  env.cpp  (+33 more)
src/Enclave/mbedtls-SGX/: CMakeLists.txt  Makefile
src/Enclave/mbedtls-SGX/cmake/: Init.cmake
src/Enclave/mbedtls-SGX/example/linux/: CMakeLists.txt  (+1 more)
src/Enclave/mbedtls-SGX/trusted/: CMakeLists.txt  glue.c  mbedtls_tlib.vcxproj
src/Enclave/mbedtls-SGX/untrusted/: mbedtls_sgx_u_net.c  mbedtls_sgx_u_std.c
src/Enclave/root_ca/: Bloomberg_CA.pem  pem2def.py
src/Enclave/scrapers/: README.txt  Scraper.cpp  Scraper.h  UPS_Tracking.cpp  UPS_Tracking.h  bitcoinfees.cpp  bitcoinfees.h  coinmarketcap.cpp  coinmarketcap.h  coned.cpp  coned.h  current_Google.cpp  current_Yahoo.cpp  current_bloomberg.cpp  current_coinmarket.cpp  current_coinmarket.h  current_weather.cpp  current_weather.h  error_codes.h  fbgraph.cpp  fbgraph.h  fblogin.cpp  fblogin.h  flight.cpp  flight.h  lint.sh  mloginscript.sh  scraper_lib.c  scraper_lib.cpp  scraper_lib.h  scraper_utils.cpp  scraper_utils.h  scrapers.h  ssalogin.cpp  ssalogin.h  steam2.cpp  steam2.h  stock_ticker.cpp  stock_ticker.h  stockticker.h  (+10 more)
src/Enclave/test/: ABI.cpp  Flight.cpp  SealData.cpp  Transaction.cpp  abi_test.cpp  bloomberg_test.cpp  coin_test.cpp  coinmarketcap_test.cpp  coned_test.cpp  dummy_test.cpp  etest_yahoo.cpp  fb_test.cpp  fbgraph_test.cpp  flight_test.cpp  google_test.cpp  keygen-test.cpp  regex_test.cpp  rlp_test.cpp  rlp_test_cases  sealing_test.cpp  ssalogin_test.cpp  ssl.cpp  ssl_test.cpp  steam_test.cpp  stock_test.cpp  test_bloomberg.cpp  test_flight.cpp  test_google.cpp  test_regex.cpp  test_seal_data.cpp  test_ssl.cpp  test_steam.cpp  test_transaction.cpp  test_yahoo.cpp  tls_test.cpp  transaction_test.cpp  transaction_tmpl.py  uint_test.cpp  ups_test.cpp  weather_test.cpp  (+2 more)
src/cmake/: ConfigSGX.cmake  FindJsonCppRpc.cmake  FindJsoncpp.cmake  FindLibODB.cmake  FindSGXSuite.cmake  Init.cmake
src/config/: ecdsa-key-release  hybrid-key-release
src/dockerfiles/: Dockerfile-intel-sgx
src/mbedtls-SGX/: .gitignore  LICENSE  Makefile
src/mbedtls-SGX/trusted/: Makefile  mbedtls_sgx.edl
src/utils/: add_license_header.sh  build_gtest.sh  build_odb.sh  db.py  deps-ARCH  install_jsonrpccpp.sh
win/jsonrpc-cpp-0.5/doc/: Makefile.am
win/jsonrpc-cpp-0.5/test/: Makefile.am  test-netstring.cpp
(+855 files in other folders)
